# afpfs-ng

./: .gitignore  AUTHORS  Bugs.txt  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README.md  TODO  config.h.in  configure  configure.ac
cmdline/: Makefile.in  cmdline_afp.c  cmdline_testafp.c  cmdline_testafp.h  getstatus.c
docs/: Makefile.in
fuse/: Makefile.in  client.c  commands.c  daemon.c  fuse_error.c  fuse_int.c  mount_afp.1
include/: Makefile.am
include/afpfs-ng/: Makefile.am  afp.h  dsi.h  map_def.h  midlevel.h  utils.h
lib/: Makefile.am  Makefile.in  afp.c  afp_internal.h  afp_url.c  client.c  codepage.c  connect.c  did.c  dsi.c  forklist.c  log.c  loop.c  lowlevel.c  map_def.c  meta.c  midlevel.c  proto_attr.c  proto_desktop.c  proto_directory.c  proto_files.c  proto_fork.c  proto_login.c  proto_map.c  proto_replyblock.c  proto_server.c  proto_session.c  proto_volume.c  resource.c  server.c  status.c  uams.c  users.c  utils.c
test/: Makefile
